@@ -1,3 +1,5 @@
+2006/7/12 -- released version 20060712_trunk
+
 2006/7/11 -- released version 20060711_trunk
 
 2006/7/10 -- released version 20060710_trunk
